--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -18,7 +18,7 @@
        
     </div>
 
-    <div class="row">
+    <div class="row mt-5">
 
 
         <div class="col-sm-3">
@@ -65,7 +65,7 @@
         
 
     </div>
-    <div class="row">
+    <div class="row mt-5 mb-5">
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="assets/lib.avif" alt="Card image cap">
