--- a/src/app/createbook/createbook.component.css
+++ b/src/app/createbook/createbook.component.css
@@ -1,8 +1,8 @@
-.field {
+.field,checkbox {
     width: 80%;
     margin-left: 10%;
 }
-h1,h2,p,mat-label{
+h1,h2,p,mat-label,checkbox{
     color:white;
 }
 .second{
@@ -22,7 +22,7 @@ input, textarea{
 app-foot{
     background-color: #232946;
 }
-.mat-radio-button ~ .mat-radio-button {
+.mat-radio-button ~ .mat-radio-button,checkbox {
     margin-left: 16px;
   }
   mat-radio-group, mat-radio-button{
