--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -13,6 +13,7 @@
         <button mat-button routerLink="createbook">Add Book</button>
         <button mat-button routerLink="about">About</button>
         <button mat-button routerLink="books">Books</button>
+        <button mat-button routerLink="viewcart"><span class="material-icons">shopping_cart</span></button>
     </div>
     <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
      <mat-icon>menu</mat-icon>
