--- a/src/app/Components/signup/signup.component.html
+++ b/src/app/Components/signup/signup.component.html
@@ -7,20 +7,20 @@
                 <div class="row mb-4">
                   <mat-form-field class="field" appearance="outline">
                       <mat-label>Name</mat-label>
-                      <input name="name"  matInput>
+                      <input name="name" [(ngModel)]="au.authorName" matInput>
                   </mat-form-field></div>
 
                 <div class="row mb-4">
                 <mat-form-field class="field" appearance="outline">
                     <mat-label>Email</mat-label>
-                    <input name="email"  matInput>
+                    <input name="email" [(ngModel)]="au.authorEmail" matInput>
                 </mat-form-field></div>
               
               
                 <div class="row mb-4">
                 <mat-form-field class="field" appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input type="password" name="name"  matInput>
+                    <input type="password" [(ngModel)]="au.authorPassword" name="name"  matInput>
                 </mat-form-field></div>
               
               
@@ -28,10 +28,10 @@
               
                 
                 
-                <button type="button" class="btn  mb-4">Signup</button>
+                <button type="button" (click)="saveAu()" class="btn  mb-4">Signup</button>
               
              
-                
+               
             
         </div>
     </div>
