--- a/src/app/Components/books/books.component.html
+++ b/src/app/Components/books/books.component.html
@@ -1,25 +1,39 @@
 <div class="container-fluid">
 
-<div class="row card-group">
-    <div class="col-md-3" *ngFor="let b of books" >
-          <div class="card mt-2 card h-80" style="width: 90%;">
-            
-            <div class="card-body ">
+  <div class="row card-group">
+    <div class="col-md-3" *ngFor="let b of books">
+      <div class="card mt-5 text-center card h-80" style="width: 90%; height: 450px;">
+
+        <div class="card-body ">
           <mat-card-header>
             <mat-card-title>{{b.title}}</mat-card-title>
           </mat-card-header>
-          <img class="card-img mt-2" src="{{b.logo}}" width="200px" height="150px"  alt="Card image cap">
-               <b><h5 class="card-subtitle mb-2 text-muted"> By {{b.authorname}}</h5></b> 
-              
-            
-              <button type="button" (click)="addToCart(b)" class="btn btn-block mb-2">Buy</button>
-              <button type="button" class="btn btn-block mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Details</button>
-              
-            </div>
+          <div class="mid text-center">
+            <img class="card-img mt-2 " src="{{b.logo}}" width="180px" height="220px" alt="Card image cap">
+            <b>
+              <h5 class="card-subtitle mb-2 text-muted"> By {{b.authorName}}</h5>
+            </b>
           </div>
-      
+
+
+          <div class="stats mt-2">
+
+            <div class="d-flex justify-content-between p-price"><span>Category</span><span>{{b.category}}</span></div>
+            <div class="d-flex justify-content-between p-price"><span>Price</span><span>{{b.price |currency:
+                'INR'}}</span></div>
+          </div>
+          <div class="btns text-center">
+            <button type="button" (click)="addToCart(b)" class="btn btn-block mb-2">Buy</button>
+            <button type="button" class="btn btn-block mb-2" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">Details</button>
+          </div>
+
+
+        </div>
+      </div>
+
 
     </div>
-</div>
+  </div>
 </div>
 <app-foot></app-foot>
