--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -1,29 +1,53 @@
 <div class="container-fluid">
-    <h1>Digita Book</h1><br>
-    <p>
 
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, vero! Sapiente, dolorum eius ut voluptates vitae aut voluptate ullam voluptatibus debitis saepe, error quam, inventore fugiat totam minima odit repellat.
-    </p>
-    
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum repudiandae laborum odit nisi ea debitis iure dolorum, esse ex vitae delectus blanditiis minus enim libero! Eaque facilis nam natus libero!</p>
+  <div class="row mt-3">
 
+    <h3 style="text-align: center">"Thanks to Pathsala, there is no reason to buy books on any other platform.— <span><i>Abhishek</i></span>"</h3>
 
   </div>
-  <div class="container">
+  <div class="row">
+
+    <h1 style="text-align: center">Thank you for using Bookshop.org!</h1>
+
+    <h5 style="text-align: center">A BETTER WAY TO BUY BOOKS ONLINE</h5>
+    <hr>
+
+    <h3 style="text-align: center">Our Mission :<span>To help local, independent bookstores thrive in the age of ecommerce.</span></h3>
+
+  </div>
+  <div class="row mid"> 
+
+    <div class="col-sm-2">
+
+    </div>
+    <div class="col-sm-8">
+
+      <h3>Our Vison:</h3>
+
+    <p> We work to connect readers with independent booksellers all over the world. We believe local bookstores are essential community hubs that foster culture, curiosity, and a love of reading, and we're committed to helping them survive and thrive. Our platform gives independent bookstores tools to compete online and financial support to help them maintain their presence in local communities.</p>
+
+    </div>
+    <div class="col-sm-2">
+
+    </div>
     <div class="row">
-      <div class="col-md">
-       
-        <img src="assets/Pathsala.png" alt="" >
+      <div class="col-sm-4">
+
+
       </div>
-      <div class="col-md">
-        <img src="assets/Pathsala.png" alt="" >
+      <div class="col-sm-4">
+
+        <img src="assets/abt.png" width="450px" height="500px" alt="">
+        
       </div>
-      <div class="col-md">
-        <img src="assets/Pathsala.png" alt="" >
-      </div>
-      <div class="col-md">
-        <img src="assets/Pathsala.png" alt="" >
+      <div class="col-sm-4">
+
+        
       </div>
     </div>
+    
+
   </div>
-  <app-foot></app-foot>
+
+</div>
+<app-foot></app-foot>
