--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -1,18 +1,80 @@
-<h3>Cart</h3>
 
-<div class="cart-item" *ngFor="let item of items">
-  <span>Book Title : {{ item.title }}</span>
-  <span>Price : {{ item.price | currency }}</span>
-  <span>Book Author : {{ item.authorname }}</span>
-</div>
 
 <div class="container-fluid">
 
 
-    <h3 style="text-align: center;">Welcome to your Cart.</h3>
-
-    <h5 style="text-align: center;">Dear , Complete your payment before it goes out of stock.</h5>
+  <!-- <div class="main text-center mt-3">
+    <h2>Welcome to your Cart.</h2>
+  
+    <h3>Dear Customer, Complete your payment before it goes out of stock.</h3>
     <hr>
+  </div> -->
 
 
 </div>
+<div class="container" *ngIf="items.length<1">
+
+  <div class="container  mt-100">
+    <div class="row">
+    
+     <div class="col-md-12">
+     
+         <div class="card">
+       <div class="card-header">
+      
+       </div>
+       <div class="card-body cart">
+           <div class="col-sm-12 empty-cart-cls text-center">
+             <img src="https://i.imgur.com/dCdflKN.png" width="130" height="130" class="img-fluid mb-4 mr-3">
+             <h3><strong>Hello, Your Cart is Empty</strong></h3>
+             <h4>Add something to make me happy :)</h4>
+             <a href="home" class="btn btn-primary cart-btn-transform m-3" data-abc="true">continue shopping</a>
+             
+           
+           </div>
+       </div>
+   </div>
+       
+     
+     </div>
+    
+    </div>
+   
+   </div>
+
+
+</div>
+<div class="container-fluid">
+
+  <div class="row card-group">
+    
+      <div class="col-md-3" *ngFor="let b of dupli" >
+       
+   
+            <div class="card mt-2 text-center card h-80" style="width: 100%; height: 500px;">
+              
+              <div class="card-body ">
+            <mat-card-header>
+              <mat-card-title>{{b.title}}</mat-card-title>
+            </mat-card-header>
+            <img class="card-img mt-2 " src="{{b.logo}}" width="180px" height="220px"  alt="Card image cap">
+                 <b><h5 class="card-subtitle mb-2 text-muted"> By {{b.authorName}}</h5></b> 
+              
+                 <div class="stats mt-2">
+                  
+                  <div class="d-flex justify-content-between p-price"><span>Category</span><span>{{b.category}}</span></div>
+                  <div class="d-flex justify-content-between p-price"><span>Price</span><span>{{b.price |currency: 'INR'}}</span></div>
+              </div>
+              <div class="btns text-center">
+                <button type="button"  class="btn btn-block mb-2">Payment</button>
+                <button type="button" class="btn btn-block mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Details</button>
+              </div>
+                
+                
+              </div>
+            </div>
+        
+  
+      </div>
+  </div>
+  </div>
