--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -1,20 +1,19 @@
-button:hover{
-    background-color: rgb(29, 90, 148);
-    color: white;
-  }
-model field{
-  max-width: 70%;
-  margin:2px;
 
+  .content {
+    padding: 16px;
 }
-
-model{
-  background-color: rgb(29, 90, 148);
-  max-width: 80%;
-
+button{
+  background-color: whitesmoke;
+  margin: 5px;
+}
+.content > mat-card {
+    width: 200px;
 }
 .card{
-  border-radius: 4px;
+  margin-left: 20px;
+} 
+.card{
+  border-radius: 2px;
   background: #fff;
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
     transition: .2s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.2s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
@@ -25,4 +24,14 @@ cursor: pointer;
 .card:hover{
    transform: scale(1.05);
 box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+.mat-card-title{
+  font-size: medium;
+}
+li{
+
+  text-decoration: none;
+  display: inline;
+  
+
 }
