--- a/src/app/createbook/createbook.component.html
+++ b/src/app/createbook/createbook.component.html
@@ -38,7 +38,7 @@
                 </mat-form-field>
                 <mat-form-field class="field" appearance="outline">
                     <mat-label>Author Name</mat-label>
-                    <input name="authorname" [(ngModel)]="book.authorname" required matInput>
+                    <input name="authorname" [(ngModel)]="book.authorName" required matInput>
                 </mat-form-field>
                 <mat-form-field class="field" appearance="outline">
                     <mat-label>Price</mat-label>
@@ -57,7 +57,7 @@
                 </mat-form-field>
                     
                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="status" [(ngModel)]="book.Active"  id="flexCheckDefault">
+                    <input class="form-check-input" type="checkbox" name="bookStatus" [(ngModel)]="book.bookStatus"  id="flexCheckDefault">
                     <label class="form-check-label" for="flexCheckDefault">
                       Active
                     </label>
@@ -75,12 +75,12 @@
                 <div class="text-center">
                     <button type="button" (click)="save()" class="btn  mb-4">Submit</button>
                 </div>
+              
             </div>
             <!--  </form> -->
             </div>
            
-       
-
+        
     </div>
     </div>
     <app-foot></app-foot>
