--- a/src/app/Components/signup/signup.component.css
+++ b/src/app/Components/signup/signup.component.css
@@ -62,7 +62,7 @@ body {
 
 .card .card-body {
     padding: 30px;
-    background-color: transparent;
+    background-color: transparent
 }
 
 .btn-primary, .btn-primary.disabled, .btn-primary:disabled {
