--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -25,7 +25,7 @@
        </div>
        <div class="card-body cart">
            <div class="col-sm-12 empty-cart-cls text-center">
-             <img src="https://i.imgur.com/dCdflKN.png" width="130" height="130" class="img-fluid mb-4 mr-3">
+             <img src="assets/empty.jpg" width="300" height="200" class="img-fluid mb-4 mr-3">
              <h3><strong>Hello, Your Cart is Empty</strong></h3>
              <h4>Add something to make me happy :)</h4>
              <a href="home" class="btn btn-primary cart-btn-transform m-3" data-abc="true">continue shopping</a>
@@ -57,7 +57,7 @@
             <mat-card-header>
               <mat-card-title>{{b.title}}</mat-card-title>
             </mat-card-header>
-            <img class="card-img mt-2 " src="{{b.logo}}" width="180px" height="220px"  alt="Card image cap">
+            <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{b.logo}}" width="180px" height="220px"  alt="Card image cap">
                  <b><h5 class="card-subtitle mb-2 text-muted"> By {{b.authorName}}</h5></b> 
               
                  <div class="stats mt-2">
@@ -66,8 +66,8 @@
                   <div class="d-flex justify-content-between p-price"><span>Price</span><span>{{b.price |currency: 'INR'}}</span></div>
               </div>
               <div class="btns text-center">
-                <button type="button"  class="btn btn-block mb-2">Payment</button>
-                <button type="button" class="btn btn-block mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Details</button>
+                
+                <button type="button" class="btn btn-block mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Payment</button>
               </div>
                 
                 
@@ -78,3 +78,48 @@
       </div>
   </div>
   </div>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title" id="exampleModalLabel">Details</h3>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <mat-form-field class="field" appearance="outline">
+              <mat-label>Name</mat-label>
+              <input name="title"  matInput>
+          </mat-form-field>
+          </div>
+          <div class="row">
+            <mat-form-field class="field" appearance="outline">
+              <mat-label>Email</mat-label>
+              <input name="category"  matInput>
+          </mat-form-field>
+          </div>
+          
+      
+        
+           <div class="row">    <mat-form-field class="field" appearance="outline">
+            <mat-label>Published Date</mat-label>
+            <input type="date"  name="publishedDate"  matInput>
+        </mat-form-field>
+            </div>
+  
+         <div class="row"><mat-form-field class="field" appearance="outline">
+          <mat-label>Content</mat-label>
+          <textarea matInput placeholder=".."></textarea>
+        </mat-form-field>
+      </div>
+          
+        <div class="row"><div class="text-center">
+          <button type="button" class="btn  mb-4">Done</button>
+      </div></div>
+    
+    </div>
+  </div>
+  </div>
+  </div>
+  
+  
