--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -12,7 +12,7 @@
               <mat-card-title>{{b.title}}</mat-card-title>
             </mat-card-header>
             <div class="mid text-center">
-              <img class="card-img mt-2 " src="{{b.logo}}" width="180px" height="220px"  alt="Card image cap">
+              <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{b.logo}}" width="180px" height="220px"  alt="Card image cap">
                  <b><h5 class="card-subtitle mb-2 text-muted"> By {{b.authorName}}</h5></b> 
             </div>
             
