--- a/src/app/Components/searchbooks/searchbooks.component.html
+++ b/src/app/Components/searchbooks/searchbooks.component.html
@@ -56,7 +56,7 @@
             <mat-card-header>
               <mat-card-title>{{b.title}}</mat-card-title>
             </mat-card-header>
-            <img class="card-img mt-2 " src={{b.logo}} width="200px" height="150px" alt="Card image cap">
+            <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{b.logo}}" width="200px" height="150px" alt="Card image cap">
             <b>
               <h5 class="card-subtitle mb-2 text-muted"> By {{b.authorName}}</h5>
             </b>
