--- a/src/app/foot/foot.component.html
+++ b/src/app/foot/foot.component.html
@@ -1,12 +1,12 @@
 <footer class="text-center text-lg-start footerr text-muted">
     <!-- Section: Social media -->
-    <section class="d-flex justify-content-center justify-content-lg-between p-5 border-bottom">
+    <section class="d-flex justify-content-center justify-content-lg-between p-3 border-bottom">
       <!-- Left -->
       
       <!-- Left -->
   
       <!-- Right -->
-      <div>
+      <!-- <div>
         <a href="" class="me-4 text-reset">
           <i class="fab fa-facebook-f"></i>
         </a>
@@ -25,7 +25,7 @@
         <a href="" class="me-4 text-reset">
           <i class="fab fa-github"></i>
         </a>
-      </div>
+      </div> -->
       <!-- Right -->
     </section>
     <!-- Section: Social media -->
@@ -54,10 +54,10 @@
               Services
             </h6>
             <p>
-              <a href="#!" class="text-reset">Angular</a>
+              <a href="about" class="text-reset">About</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">React</a>
+              <a href="home" class="text-reset">Home</a>
             </p>
             <p>
               <a href="#!" class="text-reset">Vue</a>
