updated on 18sep

--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="row">
 
-    <h1 style="text-align: center">Thank you for using Bookshop.org!</h1>
+    <h1 style="text-align: center">Thank you for using Pathsala.org!</h1>
 
     <h5 style="text-align: center">A BETTER WAY TO BUY BOOKS ONLINE</h5>
     <hr>
