--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -3,7 +3,7 @@
     padding: 16px;
 }
 button{
-  background-color: whitesmoke;
+  background-color: rgb(201, 201, 213);
   margin: 5px;
 }
 .content > mat-card {
@@ -35,3 +35,99 @@ li{
   
 
 }
+
+.container-fluid{
+  background-color: #232946;
+}
+
+
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
+
+
+       body{
+        background-color:#eee;
+        font-family: "Poppins", sans-serif;
+        font-weight: 200;
+       }
+
+       .height{
+        height: 80vh;
+       }
+       
+
+       .search{
+       position: relative;
+       box-shadow: 0 0 40px rgba(51, 51, 51, .1);
+         
+       }
+
+       .search input{
+
+        height: 50px;
+        text-indent: 20px;
+
+
+       }
+
+
+       .search input:focus{
+
+       
+        border: 2px solid blue;
+
+
+       }
+
+       .search .fa-search{
+
+        position: absolute;
+        top: 10px;
+        left: 16px;
+
+       }
+
+       .search button{
+
+        position: absolute;
+        top: 1px;
+        right: 10px;
+        height: 38px;
+        color:white;
+        width: 110px;
+        background: blue;
+
+       }
+
+
+       body {
+        margin: 0;
+        font-family: Roboto,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+        font-size: .8125rem;
+        font-weight: 400;
+        line-height: 1.5385;
+        color: #333;
+        text-align: left;
+        background-color: #f5f5f5;
+    }
+    
+    .mt-50{
+        margin-top: 50px;
+    }
+    .mb-50{
+        margin-bottom: 50px;
+    }
+    
+    
+    .bg-teal-400 { 
+        background-color: #26a69a;
+    }
+    
+    a{
+        text-decoration: none !important;
+    }
+    
+    
+    .fa {
+            color: red;
+    }
