--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,11 +1,68 @@
-<div class="container-fluid">
-<div class="row">
-  <h2  style="text-align:center"  >Welocme</h2>
-  <h3 style="text-align:center" >Available books for purchase.</h3>
+ <div class="container-fluid">
+
+    <div class="row banner d-flex justify-content-center align-items-center">
+
+      <div class="col-md-8">
+
+        <div class="search mt-5">
+          <i class="fa fa-search"></i>
+          <input type="text" class="form-control" [(ngModel)]="query" placeholder="Search by Title, Category, Price, Author Name..">
+        <button class="btn srchbtn bg-primary btn-block" (click)="SearchByAnything(query)" >Search</button>
+         
+        </div>
+        
+      </div>
+    
+   </div>
+
+
+   <div class="row mt-3 card-group">
+    <div class="col-md-3" *ngFor="let x of bb" >
+          <div class="card mt-1  mb-3 text-center card h-80" style="width: 100%; height: 450px;">
+            
+            <div class="card-body ">
+          <mat-card-header>
+            <mat-card-title>{{x.title}}</mat-card-title>
+          </mat-card-header>
+          <div class="mid text-center">
+            <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{x.logo}}" width="180px" height="220px"  alt="Card image cap">
+               <b><h5 class="card-subtitle mb-2 text-muted"> By {{x.authorName}}</h5></b> 
+               
+              
+          </div>
+          
+            
+               <div class="stats mt-2">
+                
+                <div class="d-flex justify-content-between p-price"><span>Category</span><span>{{x.category}}</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Price</span><span>{{x.price |currency: 'INR'}}</span></div>
+               
+            </div>
+            <div class="btns text-center">
+              <button type="button" (click)="addToCart(x)" class="btn btn-block mb-2">Add to Cart</button>
+            </div>
+              
+              
+            </div>
+          </div>
+      
+
+    </div>
 </div>
-  <div class="row card-group">
+
+  </div>
+
+  
+
+
+<div class="container-fluid">
+  <!-- <div class="row">
+    <h2  style="text-align:center"  >Welocme</h2>
+    <h3 style="text-align:center" >Available books for purchase.</h3>
+  </div> -->
+  <div class="row  card-group">
       <div class="col-md-3" *ngFor="let b of books" >
-            <div class="card mt-2 text-center card h-80" style="width: 90%; height: 450px;">
+            <div class="card mt-2  mb-3 text-center card h-80" style="width: 100%; height: 450px;">
               
               <div class="card-body ">
             <mat-card-header>
@@ -18,13 +75,13 @@
             
               
                  <div class="stats mt-2">
-                  <div class="d-flex justify-content-between p-price"><span>Author</span><span>{{b.authorName}}</span></div>
+                  
                   <div class="d-flex justify-content-between p-price"><span>Category</span><span>{{b.category}}</span></div>
                   <div class="d-flex justify-content-between p-price"><span>Price</span><span>{{b.price |currency: 'INR'}}</span></div>
               </div>
               <div class="btns text-center">
-                <button type="button" (click)="addToCart(b)" class="btn btn-block mb-2">Buy</button>
-                <button type="button" class="btn btn-block mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Details</button>
+                <button type="button" (click)="addToCart(b)" class="btn btn-block mb-2">Add to Cart</button>
+                <!-- <button type="button" class="btn btn-block mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Details</button> -->
               </div>
                 
                 
@@ -35,7 +92,11 @@
       </div>
   </div>
   </div>
+
+
 <app-foot></app-foot>
+
+
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -47,7 +108,7 @@
         <div class="row">
           <mat-form-field class="field" appearance="outline">
             <mat-label>Title</mat-label>
-            <input name="title"  matInput>
+            <input name="title"   matInput>
         </mat-form-field>
         </div>
         <div class="row">
