--- a/src/app/Components/signup/signup.component.css
+++ b/src/app/Components/signup/signup.component.css
@@ -58,7 +58,9 @@ body {
     border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
 }
 
-
+.container-fluid{
+  background-color: #232946;
+}
 
 .card .card-body {
     padding: 30px;
