--- a/src/app/Components/signup/signup.component.html
+++ b/src/app/Components/signup/signup.component.html
@@ -32,8 +32,11 @@
         </div> 
     </div> -->
 
+<div class="container-fluid">
 
-<div class="container mt-3">
+
+
+<div class="container">
 
 
 
@@ -46,7 +49,7 @@
                   <div class="row justify-content-center">
                     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
       
-                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Register yourself</p>
+                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Register <span class="text-primary dark:text-secondary">Yourself.</span></p>
       
                       <form class="mx-1 mx-md-4">
       
@@ -90,7 +93,7 @@
                         
       
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <button type="button" (click)="saveAu()" class="btn btn-primary btn-lg">Submit</button>
+                          <button type="button" (click)="saveAu()" class="btn btn-primary btn-block">Submit</button>
                         </div>
       
                       </form>
@@ -113,6 +116,6 @@
 
 </div>
        
-       
+</div>       
      
   <app-foot></app-foot>
