--- a/src/app/foot/foot.component.html
+++ b/src/app/foot/foot.component.html
@@ -32,7 +32,7 @@
   
     <!-- Section: Links  -->
     <section class="">
-      <div class="container text-center text-md-start mt-5">
+      <div class="container text-center text-md-start mt-3">
         <!-- Grid row -->
         <div class="row mt-3">
           <!-- Grid column -->
@@ -51,7 +51,7 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Services
+              Useful links
             </h6>
             <p>
               <a href="about" class="text-reset">About</a>
@@ -60,27 +60,14 @@
               <a href="home" class="text-reset">Home</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Vue</a>
+              <a href="signup" class="text-reset">Signup</a>
             </p>
           </div>
           <!-- Grid column -->
   
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
-            </h6>
-            <p>
-              <a href="#!" class="text-reset">Pricing</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Settings</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Orders</a>
-            </p>
-          </div>
+          <!-- -->
+          
           <!-- Grid column -->
   
           <!-- Grid column -->
@@ -90,7 +77,7 @@
             <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
             <p>
               <i class="fas fa-envelope me-3"></i>
-              abhishekydv98@outlook.com
+              pathsala.info@outlook.com
             </p>
             <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
           </div>
