--- a/src/app/Components/author-dashboard/author-dashboard.component.html
+++ b/src/app/Components/author-dashboard/author-dashboard.component.html
@@ -52,7 +52,7 @@
                           <td>{{b.title}}</td>
 
                           <td>{{b.bookStatus}}</td>
-                          <td><button mat-icon-button color="grey"   data-bs-toggle="modal" data-bs-target="#exampleModal">
+                          <td><button mat-icon-button color="grey" (click)="getRecordsofBook(b.bookId)"  data-bs-toggle="modal" data-bs-target="#exampleModal">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                                 <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                                 <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
@@ -104,48 +104,39 @@
           <div class="row">
             <mat-form-field class="field" appearance="outline">
               <mat-label>Title</mat-label>
-              <input name="title" [(ngModel)]="b.title" matInput>
+              <input name="title" [(ngModel)]="bres.title" matInput>
           </mat-form-field>
           </div>
           <div class="row">
             <mat-form-field class="field" appearance="outline">
               <mat-label>Category</mat-label>
-              <input name="category"  matInput>
+              <input name="category" [(ngModel)]="bres.category"  matInput>
           </mat-form-field>
           </div>
-          <div class="row"> <mat-form-field class="field" appearance="outline">
-            <mat-label>Logo URL</mat-label>
-            <input name="logo"  matInput>
-        </mat-form-field></div>
-        
-       <div class="row"><mat-form-field class="field" appearance="outline">
-        <mat-label>Author Name</mat-label>
-        <input name="authorname" required matInput>
-    </mat-form-field></div>
-        <div class="row"><mat-form-field class="field" appearance="outline">
-          <mat-label>Price</mat-label>
-          <input type="number"  name="price" matInput>
-      </mat-form-field></div>
-        <div class="row">  <mat-form-field class="field" appearance="outline">
-          <mat-label>Publisher Name</mat-label>
-          <input name="publisher"  matInput>
-      </mat-form-field></div>
-      
-        
-           <div class="row">    <mat-form-field class="field" appearance="outline">
-            <mat-label>Published Date</mat-label>
-            <input type="date"  name="publishedDate"  matInput>
-        </mat-form-field>
-            </div>
-  
-         <div class="row"><mat-form-field class="field" appearance="outline">
-          <mat-label>Content</mat-label>
-          <textarea matInput placeholder=".."></textarea>
-        </mat-form-field>
-      </div>
+          <div class="row">
+            <mat-form-field class="field" appearance="outline">
+              <mat-label>Publisher</mat-label>
+              <input name="category" [(ngModel)]="bres.publisher"  matInput>
+          </mat-form-field>
+          </div>
           
-        <div class="row"><div class="text-center">
-          <button type="button" class="btn  mb-4">Submit</button>
+        <div class="row"><mat-form-field class="field" appearance="outline">
+            <mat-label>Price</mat-label>
+            <input type="number" [(ngModel)]="bres.price" name="price" matInput>
+        </mat-form-field></div>
+          
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="bookStatus" [(ngModel)]="bres.bookStatus"  id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Active
+            </label>
+          </div>
+        
+       
+
+          
+        <div class="row mt-1 "><div class="text-center">
+          <button type="button"  (click)=updateBook(bres.bookId) class="btn  mb-4">Submit</button>
       </div></div>
     
     </div>
