added list of purchased books

--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -93,9 +93,9 @@ li{
         top: 1px;
         right: 10px;
         height: 38px;
-        color:white;
+        
         width: 110px;
-        background: blue;
+        background:  rgb(8, 8, 224);
 
        }
 
