--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -11,6 +11,7 @@
         <button mat-button routerLink="home">Home</button>
         <button mat-button routerLink="about">About</button>
         <button mat-button routerLink="books">Books</button>
+        <button mat-button routerLink="purchasedbooks">MyBooks</button>
         <button mat-button routerLink="login">Login</button>
         <button mat-button routerLink="signup">Signup</button>
         <button mat-button routerLink="viewcart"><span class="material-icons">shopping_cart</span></button>
