--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -20,11 +20,11 @@
     <div class="col-md-3" *ngFor="let x of bb" >
           <div class="card mt-1  mb-3 text-center card h-80" style="width: 100%; height: 450px;">
             
-            <div class="card-body ">
+            <div class="card-body text-center ">
           <mat-card-header>
             <mat-card-title>{{x.title}}</mat-card-title>
           </mat-card-header>
-          <div class="mid text-center">
+          <div class="text-center">
             <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{x.logo}}" width="180px" height="220px"  alt="Card image cap">
                <b><h5 class="card-subtitle mb-2 text-muted"> By {{x.authorName}}</h5></b> 
                
