--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -83,7 +83,7 @@
             <mat-card-header>
               <mat-card-title>{{b.title}}</mat-card-title>
             </mat-card-header>
-            <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{b.logo}}" width="180px" height="220px"  alt="Card image cap">
+            <img class="card-img mt-2 " src="http://ec2-35-92-189-97.us-west-2.compute.amazonaws.com:9092/download/?image={{b.logo}}" width="180px" height="220px"  alt="Card image cap">
                  <b><h5 class="card-subtitle mb-2 text-muted"> By {{b.authorName}}</h5></b> 
               
                  <div class="stats mt-2">
