--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -2,7 +2,7 @@
 
   <div class="row mt-3">
 
-    <h3 style="text-align: center">"Thanks to Pathsala, there is no reason to buy books on any other platform.— <span><i>Abhishek</i></span>"</h3>
+    <h3 style="text-align: center">"Thanks to Pathsala, there is no reason to buy books on any other platform.— <span><i>Abhishek Yadav</i></span>"</h3>
 
   </div>
   <div class="row">
@@ -24,7 +24,7 @@
 
       <h3>Our Vison:</h3>
 
-    <p> We work to connect readers with independent booksellers all over the world. We believe local bookstores are essential community hubs that foster culture, curiosity, and a love of reading, and we're committed to helping them survive and thrive. Our platform gives independent bookstores tools to compete online and financial support to help them maintain their presence in local communities.</p>
+    <p> We work to connect readers with independent booksellers all over the world. We believe local bookstores are essential community hubs that foster culture, and a love of reading, and we're committed to helping them survive and thrive. Our platform gives independent bookstores tools to compete online and financial support to help them maintain their presence in local communities.</p>
 
     </div>
     <div class="col-sm-2">
@@ -37,7 +37,7 @@
       </div>
       <div class="col-sm-4">
 
-        <img src="assets/abt.png" width="450px" height="500px" alt="">
+        <img src="assets/abt.png" width="430px" height="500px" alt="">
         
       </div>
       <div class="col-sm-4">
