--- a/src/app/foot/foot.component.html
+++ b/src/app/foot/foot.component.html
@@ -91,7 +91,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2022 Copyright:
-      <a class="text-reset fw-bold" href="#">Pathsala.com</a>
+      <a class="text-reset fw-bold" href="#">Abhishek</a>
     </div>
     <!-- Copyright -->
   </footer>
